AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I .buildutils/m4
AM_CXXFLAGS = -fPIC -Wall -Wextra
bin_PROGRAMS = exPlaquette
exPlaquette_SOURCES = exPlaquette.c src/utilities.c src/algebra.c src/thermalization_hb.c src/measurement.c src/inverters.c  src/gaugefix.c src/instantontools.c src/nrutil.c src/statistics.c src/hoek_custom.c src/fox.c src/center.c
